--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^4.1.2"
+pillow = "^9.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
