--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.8"
 django = "^4.1.2"
 pillow = "^9.2.0"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
